<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@id/egyptFragment"
        android:title="@string/egypt"
        app:showAsAction="always"

        android:orderInCategory="1"
        android:icon="@drawable/egypt"/>


    <item android:id="@+id/worldFragment"
        android:title="@string/world"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/world"/>

    <item android:id="@+id/symptomsFragment"
        android:title="@string/symptoms"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:icon="@drawable/doctor"/>

    <item android:id="@+id/emergencyFragment"
        android:title="@string/emergency"
        app:showAsAction="always"
        android:orderInCategory="4"
        android:icon="@drawable/ambulance"/>

</menu>