<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".UI.Activities.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/about_appbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/about_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/about"
                app:titleTextColor="@android:color/white"
                android:theme="@style/Widget.AppCompat.PopupMenu.Overflow"
                />
        </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginTop="8dp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/data" />

            <TextView
                android:id="@+id/name_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp">

                <View
                    android:id="@+id/divider"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="1dp"
                    android:background="#F5F5F5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/corona_name"
                    android:textStyle="normal"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/flat1_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_corona"
                    android:textColor="?android:textColorSecondary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp">

                <View
                    android:id="@+id/dividerx"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="1dp"
                    android:background="#F5F5F5" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_it_spreads"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tex5"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:text="@string/spread"
                    android:textColor="?android:textColorSecondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp">

                <View
                    android:id="@+id/dividerxx"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="1dp"
                    android:background="#F5F5F5" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorSecondary"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/stay_safe_n"
                />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>