<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/world_top_layout"
    android:background="@drawable/curve"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:paddingTop="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/world"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/total_world_cases_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-light"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cases"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/total_world_death_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-light"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_deaths"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/total_world_recovered_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-light"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>