<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/country_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.chip.Chip
            android:id="@+id/title_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="----"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:chipBackgroundColor="@android:color/white"
            app:chipStrokeColor="#5d5d5d"
            app:chipStrokeWidth="2dp"
            app:layout_constraintBottom_toTopOf="@+id/country_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/country_card" />
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cases_c" />
                    <com.google.android.material.chip.Chip
                        android:id="@+id/total_cases_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="-"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:chipBackgroundColor="@android:color/holo_orange_dark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_cases_c" />
                    <com.google.android.material.chip.Chip
                        android:id="@+id/today_cases_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="-"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:chipBackgroundColor="@android:color/holo_orange_light" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_c" />
                <com.google.android.material.chip.Chip
                    android:id="@+id/recovered_world"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="-"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:chipBackgroundColor="@android:color/holo_green_light"
                    app:iconStartPadding="4dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_deaths_c" />
                    <com.google.android.material.chip.Chip
                        android:id="@+id/total_deaths_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="-"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:chipBackgroundColor="@android:color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_deaths_c" />
                    <com.google.android.material.chip.Chip
                        android:id="@+id/today_deaths_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="-"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:chipBackgroundColor="@android:color/holo_red_dark" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>